# lootifier

./: .gitignore  Cargo.toml  README.md  loadorder.txt  shell.nix  userlist.yaml
src/: file_util.rs  lib.rs  main.rs
tests/: integration_tests.rs
tests/fixtures/: loadorder.txt  userlist.yaml
