[package]
name = "lootifier"
version = "3.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde_yaml = "0.9"
serde = { version = "1.0", features = ["derive"] }

[[bin]]
name = "lootifier"
path = "src/main.rs"
